[package]
name = "rustymicrobits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "1.0.0"
rtt-target = "0.6.1"
stm32f7xx-hal = { version = "0.8.0", features = ["stm32f745", "rt"] }
